# py-fundamentals-ds

./: .gitignore  202309-7E PYTHON FUNDAMENTALS FOR DATA SCIENCE grades - 11_19_2023, 06_38 PM.csv  202401-247V_PYTHON FUNDAMENTALS FOR DATA SCIENCE grades - 03_02_2024, 01_20 AM.csv  Examen_Final_Preguntas.ipynb  Notas.ipynb  README.md  blog.db  buffer_linea.txt  buffer_test.txt  config.json  empleados.csv  frutas.json  inventario.json  lab01.ipynb  lab02.ipynb  lab03.ipynb  lab04.ipynb  lab05.ipynb  lab06.ipynb  lab07.ipynb  lab08.ipynb  lab09.ipynb  lab10.ipynb  main.py  notas_finales_21_11_2023.csv  nuevo_archivo.txt  perros.csv  perros_actualizados.csv  peru_df.csv  peru_df_final.csv  peru_df_final.html  peru_df_final.json  peru_df_final.xlsx  pyproject.toml  razas_largas.csv  terminal_test.db  warehouse.db
CleanData/: peliculas_imdb_clean.csv  visitors_clean.csv
IMPORTANTE/: Guía de acceso de Azure Lab Services.docx  Paso 3 Presentación1_ virtual_mayo 24.pptx
RawData/: movies.csv  movies_1000.csv
TransformData/: master_data_final.csv
capitulo-1/: 02_PPTS.md  Lab1_Fundamentos_Python.ipynb  Tarea1.ipynb  Tarea1_Soluciones.ipynb
capitulo-2/: 03_PPTS.md  Generador.ipynb  Lab2_Profundizar_Python.ipynb  Tarea2.ipynb  Tarea2_Soluciones.ipynb  dracula.txt  rest.restaurants.json  rest.restaurants.yield.processed.json
capitulo-3/: 04_PPTS.md  Lab3_Profundizar_Python.ipynb  Lab4_Profundizar_Python.ipynb  Tarea4.ipynb  csv_writer.csv  datos.json  dog_breeds.txt  dog_breeds.txt_m.txt  dog_breeds_bin.txt  hrdata.json  mydatabase.db  mydatabase_sqlmodel.db  normal.txt  (+5 more)
(+41 files in other folders)
